Java 8 compatibility, formatting, adding missing resources for tests